Fixed table sorting icons being unaligned with their label by shortening notes length by 20%

--- a/ASC Coil Tracker Production/Content/Site.css
+++ b/ASC Coil Tracker Production/Content/Site.css
@@ -226,7 +226,7 @@ tr:hover {
     }
 
 .clamp {
-    max-width: 20rem;
+    max-width: 16rem;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
